--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button id = "temp_btn">enter</button>
         </div>
 
-        <script></script>
+        <script src="src/script.js"></script>
     </body>
 
 </html>
