--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
         <div class="terminal">
             <ul id="commands"></ul>
-            <input id = "commandline" type ="text">
-            <button id = "temp_btn">enter</button>
+            <input id = "user_input" type ="text">
+<!--        <button id = "temp_btn">enter</button> -->
         </div>
 
         <script src="src/script.js"></script>
