--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
     <body>
         <div class="terminal">
-            <ul id="commands"></ul>
+            <div class = "terminal_outputs">
+                <span>Welcome to Allen's terminal!</span>
+            </div>
             <input id = "user_input" type ="text">
+<!--         <ul id="commands"></ul> -->
 <!--        <button id = "temp_btn">enter</button> -->
         </div>
 
