--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
 
     <body>
-        <div class="terminal">
-            <div class = "terminal_outputs">
+        <div class = "terminal">
+            <div id = "terminal_outputs">
                 <span>Welcome to Allen's terminal!</span>
             </div>
             <input id = "user_input" type ="text">
