--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset  ="UTF-8">
         <link rel="stylesheet" href="src/style.css">
-        <title>Allen's Terminal Site</title>
+        <title>Allen's TF2 Themed Terminal Site</title>
     </head>
 
     <body>
